<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Files.Activitys.FileSelectionActivity" >

    <TextView
        android:id="@+id/reading_settings_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:text="@string/reading_settings_heading"
        android:gravity="start"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"

        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/is_header_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reading_settings_view" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingEnd="5dp"
        android:paddingStart="5dp"

        android:textSize="18sp"
        android:text="@string/reading_settings_header"
        android:textColor="@android:color/black" />

    <RadioButton
        android:id="@+id/header_true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reading_settings_header_true"
        android:checked="true" />

    <RadioButton
        android:id="@+id/header_false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reading_settings_header_false" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/separators_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/is_header_radio" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingEnd="5dp"
            android:paddingStart="5dp"

            android:textSize="18sp"
            android:text="@string/reading_settings_separator"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/separators_comma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_settings_comma"
            android:checked="true"  />

        <RadioButton
            android:id="@+id/separator_semicolon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_settings_semicolon" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/reading_type_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separators_radio" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingEnd="5dp"
            android:paddingStart="5dp"

            android:textSize="18sp"
            android:text="@string/reading_settings_reading_type"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/vertical_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_settings_ver_type"
            android:checked="true"  />

        <RadioButton
            android:id="@+id/horizontal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_settings_hor_type" />

    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAllCaps="true"
        android:text="@string/reading_settings_next_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"

        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>